updated buttons to prepare for linking to other pages.

--- a/contact.html
+++ b/contact.html
@@ -29,9 +29,9 @@
     <div id="Portfolio" class="tabcontent"><h3>About</h3>
         </div>
 
-        <button class="tablink" onclick="openNav('Contact', this, 'red')" id="defaultOpen">Contact</button>
-        <button class="tablink" onclick="openNav('Portfolio', this, 'green')">Portfolio</button>
-        <button class="tablink" onclick="openNav('About', this, 'blue')">About</button>
+        <button class="tablink" onclick= id="defaultOpen">Contact</button>
+        <button class="tablink" onclick="">Portfolio</button>
+        <button class="tablink" onclick="">About</button>
     
 
 </nav>
