Added footer. Cleaned up style from HTML. Added CSS.

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <div class="header" style="border: .5px solid #777777;">
+        <div class="header">
             <h1 class="name">Rey Coronado </h1>
             <style> 
             body {
@@ -31,7 +31,7 @@
 
            
 
-<aside class="aside" style="border: 1px solid #dddddd; background-color: #ffffff;">
+<aside class="aside">
         
         <h2 class="subhead" style="float: left; margin: 3px 12px 3px 0px;">Contact</h2>
 <br>
@@ -57,8 +57,7 @@
           </div>
 </aside>
 
-<div class="footer" style="left: 0; bottom: 0; width: 100%; background-color: #777777;">
-
+<div class="footer"><p>Copyright RCJR 2020
 </div>        
 
 </body>
